--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -55,8 +55,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:paddingHorizontal="16dp"
         android:onClick="showAddressDialog"
+        android:paddingHorizontal="16dp"
         app:layout_constraintTop_toBottomOf="@+id/textView_edit_address"
         tools:layout_editor_absoluteX="0dp">
 
@@ -101,12 +101,13 @@
         android:id="@+id/tvPhoneNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Phone Number"
-        android:padding="12dp"
         android:layout_margin="12dp"
         android:background="@drawable/button_background"
         android:backgroundTint="@color/transparent"
+        android:hint="Phone Number"
+        android:padding="12dp"
         app:layout_constraintTop_toBottomOf="@+id/layout_address" />
+
     <View
         android:id="@+id/view11"
         android:layout_width="match_parent"
@@ -152,12 +153,13 @@
 
 
         <TextView
-
+            android:id="@+id/tv_paytype"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
-            android:text="Payment Type "
+            android:layout_marginStart="16dp"
 
+            android:text="Payment by card"
             android:textColor="@color/black"
             android:textSize="16dp"
             android:textStyle="normal"
@@ -185,10 +187,12 @@
         android:layout_marginTop="24dp"
         android:background="@drawable/edittext_bg"
         android:hint="Card Number"
+        android:inputType="number"
+        android:maxLength="19"
         android:padding="12dp"
         android:textColor="@color/black"
         android:textColorHint="@color/color_neutral03"
-        android:textSize="16dp"
+        android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@+id/layout_payment"
         tools:layout_editor_absoluteX="0dp" />
 
@@ -209,12 +213,13 @@
             android:layout_marginEnd="4dp"
             android:layout_weight="1"
             android:background="@drawable/edittext_bg"
-
-            android:hint="Ex Date"
+            android:hint="Ex Date (MM/YY)"
+            android:inputType="number"
+            android:maxLength="5"
             android:padding="12dp"
             android:textColor="@color/black"
             android:textColorHint="@color/color_neutral03"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
         <EditText
             android:id="@+id/tv_cvv"
@@ -224,12 +229,13 @@
             android:layout_weight="1"
             android:background="@drawable/edittext_bg"
             android:hint="CVV"
-
+            android:inputType="number"
+            android:maxLength="4"
             android:padding="12dp"
             android:textColor="@color/black"
-
             android:textColorHint="@color/color_neutral03"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
+
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <View
