--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,6 +7,7 @@
     android:fitsSystemWindows="true"
     tools:context=".ui.search.SearchActivity">
 
+    <!-- Back Button -->
     <ImageView
         android:id="@+id/img_back"
         android:layout_width="42dp"
@@ -20,13 +20,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Search Box -->
     <EditText
         android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="8dp"
-
         android:background="@drawable/custom_bg_search"
         android:backgroundTint="#33CACACA"
         android:drawableStart="@drawable/ic_search_com"
@@ -35,14 +35,14 @@
         android:paddingHorizontal="14dp"
         android:textColor="@color/color_neutral01"
         android:textColorHint="#B34E4E4E"
-
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_back" />
 
+    <!-- Recently Search Text -->
     <TextView
         android:id="@+id/textView2"
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
@@ -51,22 +51,32 @@
         android:textColor="@color/black"
         android:textSize="16dp"
         android:textStyle="bold"
-
         app:layout_constraintTop_toBottomOf="@+id/editText"
         tools:layout_editor_absoluteX="16dp" />
 
+    <!-- Popular Products Text -->
     <TextView
         android:id="@+id/textView3"
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
         android:text="Popular Products"
-
         android:textColor="@color/black"
         android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:layout_editor_absoluteX="16dp" />
+
+    <!-- RecyclerView to show search results -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewResults"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteX="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
