--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -64,6 +64,7 @@
         android:text="Popular Products"
         android:textColor="@color/black"
         android:textSize="16dp"
+        android:visibility="gone"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:layout_editor_absoluteX="16dp" />
