--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -66,6 +66,25 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/subheading_text" />
+        <EditText
+            android:id="@+id/phone_edittext"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/edittext_bg"
+            android:backgroundTint="#F4F4F4"
+            android:drawableStart="@drawable/baseline_local_phone_24"
+            android:drawablePadding="8dp"
+            android:drawableTint="@color/colorPrimary"
+            android:hint="Phone Number"
+            android:inputType="number"
+            android:padding="16dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/color_neutral04"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/user_name" />
 
         <EditText
             android:id="@+id/email_edittext"
@@ -86,7 +105,7 @@
             android:textColorHint="@color/color_neutral04"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/user_name" />
+            app:layout_constraintTop_toBottomOf="@+id/phone_edittext" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_pass"
