--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textViewWelcome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawablePadding="3dp"
@@ -45,7 +45,7 @@
             android:textSize="28dp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.core.widget.NestedScrollView
@@ -74,7 +74,7 @@
                     android:id="@+id/searchView"
                     android:layout_width="0dp"
                     android:layout_height="52dp"
-                    android:layout_marginEnd="12dp"
+                    android:layout_marginEnd="1dp"
                     android:background="@drawable/custom_bg_search"
                     android:backgroundTint="#33CACACA"
                     android:drawableStart="@drawable/ic_search_com"
@@ -94,6 +94,7 @@
                     android:background="@drawable/custom_bg_search"
                     android:backgroundTint="@color/colorPrimary"
                     android:scaleType="centerInside"
+                    android:visibility="gone"
                     android:src="@drawable/ic_settings_com"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
