--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorPrimary">#648286</color>
     <color name="colorBG">#F7F7F7</color>
     <color name="coloritem">#E4E3E3</color>
+    <color name="red">#F67A7A</color>
 
 
 
